[package]
name = "kvs"
version = "0.1.0"
authors = ["DepletedPrism"]
description = "A simple key-value store in Rust"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["cargo"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
sled = "0.34.7"
crossbeam-skiplist = "0.1.3"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5.1"
predicates = "3.1.0"
rand = "0.8.5"
tempfile = "3.10.1"
walkdir = "2.5.0"
crossbeam-utils = "0.8.19"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false